2022-05-16  Brent Fulgham  <bfulgham@apple.com>

        Remove abandoned UseScreenCaptureKit preference
        https://bugs.webkit.org/show_bug.cgi?id=240460
        <rdar://problem/93351960>

        Reviewed by Youenn Fablet.

        We no longer need this switch to activate ScreenCaptureKit, and this code is no
        longer used. We should remove it to simplify the build and reduce complexity.

        * platform/mediastream/RealtimeMediaSourceCenter.h:
        (WebCore::RealtimeMediaSourceCenter::useScreenCaptureKit const): Deleted.
        (WebCore::RealtimeMediaSourceCenter::setUseScreenCaptureKit): Deleted.

2022-05-16  Michael Catanzaro  <mcatanzaro@redhat.com>

        Unreviewed, fix build after 250565@main
        https://bugs.webkit.org/show_bug.cgi?id=240416
        <rdar://problem/93293276>

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintMaskForTextFillBox):
        * rendering/TextBoxPainter.cpp:
        (WebCore::TextBoxPainter<TextBoxPath>::debugTextShadow const):

2022-05-16  Ziran Sun  <zsun@igalia.com>

        [css-ui] alias appearance <compat-auto> keywords to 'auto' for textfield
        https://bugs.webkit.org/show_bug.cgi?id=238551

        Reviewed by Tim Nguyen.

        This is to add support of aliasing appearance to 'auto' for textfield.
        It has improved the following wpt tests
        imported/w3c/web-platform-tests/css/css-ui/appearance-textfield-001.html
        and
        imported/w3c/web-platform-tests/css/css-ui/webkit-appearance-textfield-001.html.

        The test failures though, are not fully fixed. The issue left is that the search cancel button
        for input type="search" still present while it is expected to disappear (Bug 238751).

        * rendering/RenderTheme.cpp:
        (WebCore::RenderTheme::adjustAppearanceForElement const):

2022-05-16  Loïc Le Page  <llepage@igalia.com>
