@@ -5164,9 +5164,7 @@
                 "square-button",
                 "button",
                 "default-button",
-                "inner-spin-button",
                 "listbox",
-                "listitem",
                 "media-controls-dark-bar-background",
                 "media-controls-light-bar-background",
                 "media-fullscreen-volume-slider",
@@ -5181,18 +5179,9 @@
                 "menulist-button",
                 "meter",
                 "progress-bar",
-                "progress-bar-value",
                 "slider-horizontal",
                 "slider-vertical",
-                "sliderthumb-horizontal",
-                "sliderthumb-vertical",
-                "caret",
                 "searchfield",
-                "searchfield-decoration",
-                "searchfield-results-decoration",
-                "searchfield-results-button",
-                "searchfield-cancel-button",
-                "snapshotted-plugin-overlay",
                 "textfield",
                 "relevancy-level-indicator",
                 "continuous-capacity-level-indicator",
@@ -5200,10 +5189,6 @@
                 "rating-level-indicator",
                 "-apple-pay-button",
                 "textarea",
-                "attachment",
-                "caps-lock-indicator",
-                "color-well",
-                "list-button",
                 "auto",
                 "none"
             ],
