@@ -1,3 +1,15 @@
+2022-05-16  Tim Nguyen  <ntim@apple.com>
+
+        [css-ui] Update documentation for appearance CSS property
+        https://bugs.webkit.org/show_bug.cgi?id=240481
+
+        Reviewed by Devin Rousso.
+
+        Account for r294226, r294187 and r294170.
+
+        * UserInterface/External/CSSDocumentation/CSSDocumentation-overrides.json:
+        * UserInterface/External/CSSDocumentation/CSSDocumentation.js:
+
 2022-05-13  Anjali Kumar  <anjalik_22@apple.com>
 
         Web Inspector: [Meta] Implement Timelines Film Strip
